test: Cleanup and refactor DB test